--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter",
+  "name": "pos-system",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -40,7 +40,8 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/supabase-js": "^2.45.6",
+    "@tanstack/react-query": "^5.17.0",
+    "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -55,10 +56,12 @@
     "react-resizable-panels": "^2.0.19",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.10.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
